--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,16 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="MyItemFont" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/suitregular</item>
+    </style>
+
+
+    <style name="Widget.BottomNavigationView"
+        parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/suitregular</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+
     <style name="Theme.Snackaudiobook" parent="Base.Theme.Snackaudiobook" />
 </resources>
