--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fl_con"
         android:layout_width="0dp"
+
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/bnv_main"
@@ -18,8 +19,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_main"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:paddingBottom="10dp"
+        android:layout_height="54dp"
 
 
         android:background="@drawable/menu_bar"
@@ -34,6 +34,7 @@
         app:labelVisibilityMode="labeled"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.BottomNavigationView"
         />
 
 
