--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,115 +1,260 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#121212"
     tools:context=".navigation.HomeFragment">
 
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/main_logo"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="52dp"
-        android:layout_marginStart="20dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SNACK AUDIOBOOK"
-        android:textSize="16sp"
-        android:fontFamily="@font/multicolore"
-        android:textColor="#FFFFFF"
-
-        app:layout_constraintStart_toEndOf="@id/logo"
-        app:layout_constraintTop_toTopOf="@id/logo"
-        app:layout_constraintBottom_toBottomOf="@id/logo"
-        android:layout_marginStart="4dp"/>
-    <ImageView
-        android:id="@+id/banner"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="182dp"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        android:src="@drawable/ph_banner"
-
-
-        android:layout_marginTop="12dp"/>
-
-    <TextView
-        android:id="@+id/text_recaudio"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="추천 오디오"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/suitregular"
-        app:layout_constraintTop_toBottomOf="@id/banner"
+        android:background="#121212"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="20dp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_cheright"
-        app:layout_constraintStart_toEndOf="@id/text_recaudio"
-        app:layout_constraintTop_toTopOf="@id/text_recaudio"
-        app:layout_constraintBottom_toBottomOf="@id/text_recaudio"
-        android:layout_marginStart="4dp"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_recaudio"
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/main_logo"
+                    android:layout_marginStart="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="SNACK AUDIOBOOK"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/multicolore"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginStart="4dp"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <ScrollView
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
-        android:columnCount="3"
-        android:rowCount="2"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="54dp"
         >
-        <ImageView
-            android:paddingHorizontal="12dp"
-            android:src="@drawable/ph_error"/>
-        <ImageView
-            android:paddingHorizontal="12dp"
-            android:src="@drawable/ph_error"
-            />
-        <ImageView
-            android:paddingHorizontal="12dp"
-            android:src="@drawable/ph_error"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="12dp"
-            android:paddingTop="20dp"
-            android:src="@drawable/ph_error" />
-        <ImageView
-            android:paddingTop="20dp"
-            android:paddingHorizontal="12dp"
-            android:src="@drawable/ph_error"/>
-        <ImageView
-            android:paddingTop="20dp"
-            android:paddingHorizontal="12dp"
-            android:src="@drawable/ph_error"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="220dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ph_banner"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/text_recaudio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="추천 오디오"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/suitregular"
+                    app:layout_constraintTop_toBottomOf="@id/banner"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="20dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_cheright"
+                    app:layout_constraintStart_toEndOf="@id/text_recaudio"
+                    app:layout_constraintTop_toTopOf="@id/text_recaudio"
+                    app:layout_constraintBottom_toBottomOf="@id/text_recaudio"
+                    android:layout_marginStart="4dp"/>
+
+                <GridLayout
+                    android:id="@+id/grid1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_recaudio"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:columnCount="3"
+                    android:rowCount="2"
+                    >
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"
+                        />
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="12dp"
+                        android:paddingTop="20dp"
+                        android:src="@drawable/ph_error" />
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                </GridLayout>
+
+                <TextView
+                    android:id="@+id/text_recaudio2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="이달의 오디오"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/suitregular"
+                    app:layout_constraintTop_toBottomOf="@id/grid1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"/>
 
 
-    </GridLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_cheright"
+                    app:layout_constraintStart_toEndOf="@id/text_recaudio2"
+                    app:layout_constraintTop_toTopOf="@id/text_recaudio2"
+                    app:layout_constraintBottom_toBottomOf="@id/text_recaudio2"
+                    android:layout_marginStart="4dp"/>
+                <GridLayout
+                    android:id="@+id/grid2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_recaudio2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:columnCount="3"
+                    android:rowCount="2"
+                    >
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"
+                        />
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="12dp"
+                        android:paddingTop="20dp"
+                        android:src="@drawable/ph_error" />
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                </GridLayout>
+
+                <TextView
+                    android:id="@+id/text_recaudio3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="회원님을 위한 추천"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/suitregular"
+                    app:layout_constraintTop_toBottomOf="@id/grid2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"/>
 
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_cheright"
+                    app:layout_constraintStart_toEndOf="@id/text_recaudio3"
+                    app:layout_constraintTop_toTopOf="@id/text_recaudio3"
+                    app:layout_constraintBottom_toBottomOf="@id/text_recaudio3"
+                    android:layout_marginStart="4dp"/>
+                <GridLayout
+                    android:id="@+id/grid3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_recaudio3"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:columnCount="3"
+                    android:rowCount="2"
+                    >
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"
+                        />
+                    <ImageView
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
 
+                    <ImageView
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="12dp"
+                        android:paddingTop="20dp"
+                        android:src="@drawable/ph_error" />
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                    <ImageView
+                        android:paddingTop="20dp"
+                        android:paddingHorizontal="12dp"
+                        android:src="@drawable/ph_error"/>
+                </GridLayout>
 
-
-
-
-
-
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
