--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,6 @@
     <ScrollView
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appbar"
@@ -76,7 +75,7 @@
                     android:fontFamily="@font/suitregular"
                     app:layout_constraintTop_toBottomOf="@id/banner"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="20dp"/>
                 <ImageView
                     android:layout_width="wrap_content"
@@ -94,7 +93,7 @@
                     app:layout_constraintTop_toBottomOf="@id/text_recaudio"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="horizontal"
@@ -103,29 +102,43 @@
                     android:rowCount="2"
                     >
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:src="@drawable/book1"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"/>
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book2"
                         />
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book3"/>
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingTop="20dp"
-                        android:src="@drawable/ph_error" />
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book4" />
                     <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book5"/>
                     <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book6"/>
                 </GridLayout>
 
                 <TextView
@@ -138,7 +151,7 @@
                     android:fontFamily="@font/suitregular"
                     app:layout_constraintTop_toBottomOf="@id/grid1"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="20dp"/>
 
 
@@ -150,6 +163,7 @@
                     app:layout_constraintTop_toTopOf="@id/text_recaudio2"
                     app:layout_constraintBottom_toBottomOf="@id/text_recaudio2"
                     android:layout_marginStart="4dp"/>
+
                 <GridLayout
                     android:id="@+id/grid2"
                     android:layout_width="wrap_content"
@@ -157,7 +171,7 @@
                     app:layout_constraintTop_toBottomOf="@id/text_recaudio2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="horizontal"
@@ -166,29 +180,43 @@
                     android:rowCount="2"
                     >
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:src="@drawable/book3"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"/>
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book2"
                         />
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book4"/>
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingTop="20dp"
-                        android:src="@drawable/ph_error" />
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book5" />
                     <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book6"/>
                     <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book1"/>
                 </GridLayout>
 
                 <TextView
@@ -201,7 +229,7 @@
                     android:fontFamily="@font/suitregular"
                     app:layout_constraintTop_toBottomOf="@id/grid2"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginStart="20dp"/>
 
 
@@ -220,38 +248,31 @@
                     app:layout_constraintTop_toBottomOf="@id/text_recaudio3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="horizontal"
                     android:layout_gravity="center_vertical"
                     android:columnCount="3"
-                    android:rowCount="2"
                     >
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book4"/>
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"
-                        />
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book3"/>
                     <ImageView
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
-
-                    <ImageView
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingTop="20dp"
-                        android:src="@drawable/ph_error" />
-                    <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
-                    <ImageView
-                        android:paddingTop="20dp"
-                        android:paddingHorizontal="12dp"
-                        android:src="@drawable/ph_error"/>
+                        android:layout_margin="12dp"
+                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/book1"/>
                 </GridLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
