--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,14 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#121212"
     tools:context=".navigation.SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/tx_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SNACK\nAUDIOBOOK"
+        android:textColor="@color/white"
+        android:textSize="35sp"
+        android:fontFamily="@font/multicolore"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="36dp"
+        android:layout_marginStart="20dp"/>
 
-</FrameLayout>
+    <ImageView
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/main_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="43dp"
+        android:layout_marginStart="176dp"/>
+    
+    <EditText
+        android:id="@+id/et_search"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/tx_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="22dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/et_search"
+        android:drawableStart="@drawable/ic_search_bar"
+        android:hint="검색어를 입력해주세요"
+        android:fontFamily="@font/suitregular"
+        android:textColorHint="@color/hintcolor"
+        android:drawablePadding="5dp"
+        android:paddingStart="10dp"
+        />
+    <TextView
+        android:id="@+id/tx_rec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="추천 검색어"
+        android:fontFamily="@font/suitsemibold"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/et_search"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@id/et_search"/>
+
+    <TextView
+        android:id="@+id/bt_rec1"
+        android:layout_width="57dp"
+        android:layout_height="27dp"
+        android:background="@drawable/tx_recommend"
+        app:layout_constraintTop_toBottomOf="@id/tx_rec"
+        app:layout_constraintStart_toStartOf="@id/et_search"
+        android:layout_marginTop="5dp"
+        android:text="신용우"
+        android:textColor="@color/black"
+        android:fontFamily="@font/suitregular"
+        android:gravity="center"/>
+    <TextView
+        android:id="@+id/bt_rec2"
+        android:layout_width="57dp"
+        android:layout_height="27dp"
+        android:background="@drawable/tx_recommend2"
+        app:layout_constraintTop_toBottomOf="@id/tx_rec"
+        app:layout_constraintStart_toEndOf="@id/bt_rec1"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="5dp"
+        android:text="김도형"
+        android:textColor="@color/black"
+        android:fontFamily="@font/suitregular"
+        android:gravity="center"/>
+    <TextView
+        android:id="@+id/bt_rec3"
+        android:layout_width="57dp"
+        android:layout_height="27dp"
+        android:background="@drawable/tx_recommend2"
+        app:layout_constraintTop_toBottomOf="@id/tx_rec"
+        app:layout_constraintStart_toEndOf="@id/bt_rec2"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="5dp"
+        android:text="차수현"
+        android:textColor="@color/black"
+        android:fontFamily="@font/suitregular"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="57dp"
+        android:layout_height="27dp"
+        android:background="@drawable/tx_recommend2"
+        app:layout_constraintTop_toBottomOf="@id/tx_rec"
+        app:layout_constraintStart_toEndOf="@id/bt_rec3"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="5dp"
+        android:text="나제준"
+        android:textColor="@color/black"
+        android:fontFamily="@font/suitregular"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/text_recaudio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="인기스토리"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/suitregular"
+        app:layout_constraintTop_toBottomOf="@id/bt_rec1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"/>
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_cheright"
+        app:layout_constraintStart_toEndOf="@id/text_recaudio"
+        app:layout_constraintTop_toTopOf="@id/text_recaudio"
+        app:layout_constraintBottom_toBottomOf="@id/text_recaudio"
+        android:layout_marginStart="4dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/text_recaudio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="12dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/rec_1"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="해리포터"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitregular"
+                android:textSize="22dp"/>
+
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="12dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/rec_2"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="불편한 편의점"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitregular"
+                android:textSize="22dp"/>
+
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="12dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/rec_3"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="페인트"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitregular"
+                android:textSize="22dp"/>
+
+        </androidx.cardview.widget.CardView>
+        
+        
+        
+    </LinearLayout>
+        
+
+    
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
