--- a/app/src/main/res/layout/activity_viewpage.xml
+++ b/app/src/main/res/layout/activity_viewpage.xml
@@ -12,100 +12,116 @@
         android:layout_height="422dp"
         android:src="@drawable/ph_errorpage"
         android:scaleType="centerCrop"/>
-    <TextView
-        android:id="@+id/bookname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/ph_back"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="책 제목"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:fontFamily="@font/suitsemibold"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
-    <TextView
-        android:id="@+id/bookauthor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="작가"
-        android:textColor="#FFFFFF"
-        android:alpha="0.5"
-        app:layout_constraintTop_toBottomOf="@id/bookname"
-        app:layout_constraintStart_toStartOf="@id/bookname"/>
-    <Button
-        android:id="@+id/btn_play"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        app:layout_constraintTop_toBottomOf="@id/bookauthor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/bt_start"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="16dp"
-        android:text="재생"
-        android:fontFamily="@font/suitsemibold"
-        android:drawableStart="@drawable/ic_play_arrow"
-        android:drawablePadding="-160dp"
-        android:paddingStart="160dp"
-        />
-    <Button
-        android:id="@+id/btn_store"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_play"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/bt_store"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="8dp"
-        android:text="저장"
-        android:textColor="@color/white"
-        android:fontFamily="@font/suitsemibold"
-        android:drawableStart="@drawable/ic_vertical_align_bottom"
-        android:drawablePadding="-160dp"
-        android:paddingStart="160dp"
-        />
-    <TextView
-        android:id="@+id/tx_jul"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="줄거리"
-        app:layout_constraintTop_toBottomOf="@id/btn_store"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
-        android:fontFamily="@font/suitsemibold"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp"/>
-    <TextView
-        android:id="@+id/tx_julcontext"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이라 경고하며 그가 학교로 가는 것을 방해한다. 하지만 해리는 론과 함께 하늘을 나는 차를 타고 호그와트로 떠나고, 곧 의문의 사건들을 마주한다."
-        android:textColor="@color/white"
-        android:fontFamily="@font/suitregular"
-        app:layout_constraintTop_toBottomOf="@id/tx_jul"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        android:textSize="12sp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="스낵 제작: 홍예훈"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tx_julcontext"
-        android:textColor="@color/white"
-        android:alpha="0.5"
-        android:textSize="12sp"
-        android:layout_marginStart="20dp"
-        android:fontFamily="@font/suitregular"
-        android:layout_marginTop="16sp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/bookname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:text="책 제목"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:fontFamily="@font/suitsemibold"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                android:id="@+id/bookauthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="작가"
+                android:textColor="#FFFFFF"
+                android:alpha="0.5"
+                app:layout_constraintTop_toBottomOf="@id/bookname"
+                app:layout_constraintStart_toStartOf="@id/bookname"/>
+            <Button
+                android:id="@+id/btn_play"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                app:layout_constraintTop_toBottomOf="@id/bookauthor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/bt_start"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="16dp"
+                android:text="재생"
+                android:fontFamily="@font/suitsemibold"
+                android:drawableStart="@drawable/ic_play_arrow"
+                android:drawablePadding="-160dp"
+                android:paddingStart="160dp"
+                />
+            <Button
+                android:id="@+id/btn_store"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                app:layout_constraintTop_toBottomOf="@id/btn_play"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/bt_store"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="8dp"
+                android:text="저장"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitsemibold"
+                android:drawableStart="@drawable/ic_vertical_align_bottom"
+                android:drawablePadding="-160dp"
+                android:paddingStart="160dp"
+                />
+            <TextView
+                android:id="@+id/tx_jul"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="줄거리"
+                app:layout_constraintTop_toBottomOf="@id/btn_store"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitsemibold"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/tx_julcontext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이도비는 해리에게 호그와트에 돌아가면 위험한 일을 당할 것이라 경고하며 그가 학교로 가는 것을 방해한다. 하지만 해리는 론과 함께 하늘을 나는 차를 타고 호그와트로 떠나고, 곧 의문의 사건들을 마주한다."
+                android:textColor="@color/white"
+                android:fontFamily="@font/suitregular"
+                app:layout_constraintTop_toBottomOf="@id/tx_jul"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
+                android:textSize="12sp"/>
+            <TextView
+                android:id="@+id/madeby"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="스낵 제작: 홍예훈"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tx_julcontext"
+                android:textColor="@color/white"
+                android:alpha="0.5"
+                android:textSize="12sp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/suitregular"
+                android:layout_marginTop="16sp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        
+
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
