Update: search activity

--- a/app/src/main/res/layout/list_grid_item.xml
+++ b/app/src/main/res/layout/list_grid_item.xml
@@ -24,7 +24,8 @@
         android:id="@+id/bookname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="어린 왕자"
+        android:text="해리포터와 마법사의 돌"
+        android:textAlignment="center"
         android:fontFamily="@font/suitsemibold"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -36,6 +37,7 @@
         android:id="@+id/bookauthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:text="생텍쥐페리"
         android:fontFamily="@font/suitregular"
         android:textColor="#868687"
